--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.alexnederlof</groupId>
-	<artifactId>jasperreports-plugin</artifactId>
+	<groupId>com.sonicle.maven</groupId>
+	<artifactId>jasperreports-maven-plugin</artifactId>
 
 	<packaging>maven-plugin</packaging>
 	<version>2.3-SNAPSHOT</version>
-	<name>jasperreport-plugin</name>
-	<description>A Jasper compiler plugin</description>
-	<url>http://github.com/alexnederlof/Jasper-report-maven-plugin</url>
-
+	<name>Sonicle JasperReports Maven Plugin</name>
+	<description>A plugin to compile JasperReport report sources</description>
+	<url>http://github.com/sonicle/jasperreports-maven-plugin</url>
 
 	<properties>
 		<maven.compiler.source>1.7</maven.compiler.source>
@@ -19,44 +18,47 @@
 	</properties>
 
 	<prerequisites>
-		<maven>3.1.0</maven>
+		<maven>3.0.5</maven>
 	</prerequisites>
 
 	<scm>
-		<connection>scm:git:git@github.com:alexnederlof/Jasper-report-maven-plugin.git</connection>
-		<url>http://github.com/alexnederlof/Jasper-report-maven-plugin</url>
-		<developerConnection>scm:git:git@github.com:alexnederlof/Jasper-report-maven-plugin.git</developerConnection>
+		<connection>scm:git:git@github.com:sonicle/jasperreports-maven-plugin.git</connection>
+		<url>http://github.com/sonicle/jasperreports-maven-plugin</url>
+		<developerConnection>scm:git:git@github.com:sonicle/jasperreports-maven-plugin.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
+	<!--
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
-
+	-->
 
 	<developers>
 		<developer>
 			<id>alexnederlof</id>
 			<name>Alex Nederlof</name>
 		</developer>
-
 		<developer>
 			<id>ammachado</id>
 			<name>Adriano Machado</name>
 			<email>adriano.m.machado@hotmail.com</email>
 		</developer>
-
 		<developer>
 			<id>lucarota</id>
 			<name>Luca Rota</name>
 		</developer>
-
-		 <developer>
+		<developer>
 			<id>tan9</id>
 			<name>Pei-Tang Huang</name>
+		</developer>
+		<developer>
+			<id>malbinola</id>
+			<name>Matteo Albinola</name>
+			<email>malbinola@sonicle.com</email>
 		</developer>
 	</developers>
 
@@ -73,38 +75,37 @@
 			<version>1.1</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
 			<artifactId>plexus-utils</artifactId>
 			<version>3.0.22</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>6.1.1</version>
+			<version>6.2.0</version>
 		</dependency>
-
-		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.maven</groupId>
-			<artifactId>maven-plugin-api</artifactId>
-			<version>3.1.0</version>
-		</dependency>
-
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports-fonts</artifactId>
 			<version>6.0.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-functions</artifactId>
+			<version>6.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
@@ -177,6 +178,7 @@
 					</tags>
 				</configuration>
 			</plugin>
+			<!--
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
@@ -188,6 +190,7 @@
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
+			-->
 		</plugins>
 	</build>
 
@@ -228,6 +231,10 @@
 		<repository>
 			<id>jasperreports</id>
 			<url>http://jasperreports.sourceforge.net/maven2</url>
+		</repository>
+		<repository>
+			<id>jr-ce-releases</id>
+			<url>http://jaspersoft.artifactoryonline.com/jaspersoft/jr-ce-releases</url>
 		</repository>
 		<repository>
 			<id>jaspersoft-third-party</id>
