--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>jasperreports-maven-plugin</artifactId>
 
 	<packaging>maven-plugin</packaging>
-	<version>2.3-SNAPSHOT</version>
+	<version>1.0.22</version>
 	<name>Sonicle JasperReports Maven Plugin</name>
 	<description>A plugin to compile JasperReport report sources</description>
 	<url>http://github.com/sonicle/jasperreports-maven-plugin</url>
