--- a/pom.xml
+++ b/pom.xml
@@ -3,31 +3,31 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sonicle.maven</groupId>
 	<artifactId>jasperreports-maven-plugin</artifactId>
-
 	<packaging>maven-plugin</packaging>
 	<version>1.0.22</version>
-	<name>Sonicle JasperReports Maven Plugin</name>
-	<description>A plugin to compile JasperReport report sources</description>
-	<url>http://github.com/sonicle/jasperreports-maven-plugin</url>
-
-	<properties>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-	</properties>
-
+	
 	<prerequisites>
 		<maven>3.0.5</maven>
 	</prerequisites>
 
+	<name>Sonicle JasperReports Maven Plugin</name>
+	<description>A plugin to compile JasperReport report sources</description>
+	<url>http://github.com/sonicle/jasperreports-maven-plugin</url>
+	<organization>
+        <name>Sonicle Srl</name>
+        <url>http://www.sonicle.com</url>
+    </organization>
+	
 	<scm>
-		<connection>scm:git:git@github.com:sonicle/jasperreports-maven-plugin.git</connection>
 		<url>http://github.com/sonicle/jasperreports-maven-plugin</url>
+		<connection>scm:git:git@github.com:sonicle/jasperreports-maven-plugin.git</connection>
 		<developerConnection>scm:git:git@github.com:sonicle/jasperreports-maven-plugin.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
-
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/sonicle/jasperreports-maven-plugin/issues</url>
+	</issueManagement>
 	<!--
 	<distributionManagement>
 		<snapshotRepository>
@@ -36,31 +36,20 @@
 		</snapshotRepository>
 	</distributionManagement>
 	-->
-
 	<developers>
 		<developer>
-			<id>alexnederlof</id>
-			<name>Alex Nederlof</name>
-		</developer>
-		<developer>
-			<id>ammachado</id>
-			<name>Adriano Machado</name>
-			<email>adriano.m.machado@hotmail.com</email>
-		</developer>
-		<developer>
-			<id>lucarota</id>
-			<name>Luca Rota</name>
-		</developer>
-		<developer>
-			<id>tan9</id>
-			<name>Pei-Tang Huang</name>
-		</developer>
-		<developer>
-			<id>malbinola</id>
 			<name>Matteo Albinola</name>
+			<url>http://www.sonicle.com</url>
 			<email>malbinola@sonicle.com</email>
 		</developer>
 	</developers>
+	
+	<properties>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
 
 	<dependencies>
 		<dependency>
