--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<maven>3.0.5</maven>
 	</prerequisites>
 
-	<name>Sonicle JasperReports Maven Plugin</name>
+	<name>jasperreports-maven-plugin</name>
 	<description>A plugin to compile JasperReport report sources</description>
 	<url>http://github.com/sonicle/jasperreports-maven-plugin</url>
 	<organization>
